# xiaoyuzhou-asr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: test.yml
references/: qwen3-asr.md  xyz-api.md
scripts/: test_transcribe.py  transcribe_podcast.py
