[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xiaoyuzhou-asr"
version = "2.0.0"
description = "小宇宙播客本地转录工具，使用 Qwen3-ASR 进行语音识别"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "worldwonderer" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.scripts]
xiaoyuzhou-asr = "transcribe_podcast:main"

[tool.pytest.ini_options]
testpaths = ["scripts"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
